# excel2graph

./: .gitignore  README.md  api.py  app.py  excel2graph.service  pyproject.toml
templates/: index.html  patent.html
