[tool.poetry]
name = "excel2graph"
version = "0.1.0"
description = ""
authors = ["Navan Chauhan <navanchauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
